# project-telescope

./: .gitignore  Cargo.toml  README.md  SUPPORT.md  install.ps1  install.sh
.github/workflows/: winget.yml
docs/: collector-authoring-guide.md
examples/hello_world/: Cargo.toml  collector.toml
examples/hello_world/src/: main.rs
src/collectors/claude-code-jsonl/: Cargo.toml  collector.toml
src/collectors/claude-code-jsonl/src/: main.rs  mapper.rs  parser.rs  scanner.rs
src/collectors/copilot-jsonl/: Cargo.toml  collector.toml
src/collectors/copilot-jsonl/src/: main.rs  mapper.rs  parser.rs  scanner.rs
src/collectors/heartbeat/: Cargo.toml  collector.toml
src/collectors/heartbeat/src/: main.rs
src/crates/collector-sdk/: Cargo.toml
src/crates/collector-sdk/include/: telescope_collector_sdk.h
src/crates/collector-sdk/src/: ffi.rs  lib.rs  runtime.rs
src/crates/collector-types/: Cargo.toml
src/crates/collector-types/src/: lib.rs
src/crates/collector-types/src/canonical/: events.rs
src/crates/collector-types/src/collector_system/: manifest.rs
src/crates/collector-types/src/ipc/: collector_protocol.rs  framing.rs  protocol.rs  transport.rs
src/crates/collector-types/src/model/: ids.rs
src/crates/collector-types/src/provenance/: mod.rs
