[workspace]
resolver = "3"
members = [
    "src/crates/collector-types",
    "src/crates/collector-sdk",
    "src/collectors/heartbeat",
    "src/collectors/copilot-jsonl",
    "src/collectors/claude-code-jsonl",
    "examples/hello_world",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.94"
license = "MIT"
repository = "https://github.com/1ES-microsoft/project-telescope"

[workspace.dependencies]
# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Error handling
anyhow = "1"

# Logging / tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# UUID
uuid = { version = "1", features = ["v4", "v5", "serde"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# Config
toml = "0.8"

# Directories
dirs = "6"

# Async trait
async-trait = "0.1"

# Inter-crate
telescope-collector-types = { path = "src/crates/collector-types" }
telescope-collector-sdk = { path = "src/crates/collector-sdk" }

[workspace.lints.rust]
unsafe_code = "deny"
missing_docs = "warn"

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
