[package]
name = "telescope-collector-copilot-jsonl"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Collector that imports GitHub Copilot session data from JSONL event logs."

[[bin]]
name = "telescope-collector-copilot-jsonl"
path = "src/main.rs"

[dependencies]
telescope-collector-sdk = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
dirs = { workspace = true }
tokio = { workspace = true, features = ["full"] }
anyhow = { workspace = true }

[lints]
workspace = true
