[package]
name = "telescope-collector-sdk"
description = "SDK for building out-of-process Telescope collectors"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lib]
crate-type = ["rlib", "cdylib"]

[dependencies]
telescope-collector-types = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }

[lints]
workspace = true
