[package]
name = "telescope-collector-types"
description = "Shared types for building Telescope collectors: events, IPC protocol, provenance"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
toml = { workspace = true }
dirs = { workspace = true }
tracing = { workspace = true }

[lints]
workspace = true
